# mopedzoom

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: _shared.md  cancel.md  config.md  edit.md  init.md  logs.md  resume.md  status.md  submit.md  tasks.md  ui.md
commands/playbook/: delete.md  edit.md  list.md  new.md
deploy/: mopedzoomd.service
docs/plans/: 2026-04-19-mopedzoom-execution.md  2026-04-19-mopedzoom-implementation.md  2026-04-20-playbook-editor-ui.md  2026-04-20-telegram-reply-review.md
docs/specs/: 2026-04-19-mopedzoom-design.md  2026-04-20-playbook-editor-ui-design.md  2026-04-20-telegram-reply-review-design.md  2026-04-20-topic-routing-design.md
playbooks/: bug-file.yaml  bug-fix.yaml  feature-impl.yaml  research.yaml
scripts/: check.sh  install.sh
src/mopedzoomd/: __init__.py  bridges.py  config.py  daemon.py  (+9 more)
tests/: conftest.py  test_bridges.py  test_build_prompt_manifest.py  test_channels_base.py  test_channels_cli_socket.py  test_channels_telegram.py  test_cli.py  test_commands_all.py  test_commands_init.py  test_config.py  test_daemon_approval.py  test_daemon_on_inbound.py  test_daemon_question.py  test_daemon_startup.py  test_daemon_taskmanager.py  test_dashboard.py  test_dashboard_editor.py  test_dashboard_more.py  test_deploy_unit.py  test_models.py  test_permission_mcp.py  test_playbooks.py  test_playbooks_shipped.py  test_router.py  test_scratch.py  test_smoke.py  test_stage_runner.py  test_state_misc.py  test_state_schema.py  test_state_tasks.py  test_sweeper.py  test_worktree.py
(+17 files in other folders)
