[project]
name = "mopedzoomd"
version = "0.1.0"
description = "Always-on Claude-powered task orchestrator"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "python-telegram-bot>=21.0",
  "anthropic>=0.40",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
  "aiosqlite>=0.19",
  "mcp>=1.0",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
mopedzoomd = "mopedzoomd.daemon:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
